# bench-wasm-native-hash

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/hash-libs/: Cargo.toml
www/: index.css  index.html
www/js/: hash-wasm.js  index.js  utils.js
